ingress/ingress-conception-canadaca-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conception-canadaca-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  #tls:
  #- hosts:
  #  - design.canada.ca
  #  secretName: design-system-tls-secret-staging
  rules:
  - host: conception.canada.ca
    http:
      paths:
      - backend:
          serviceName: nginx-fr
          servicePort: 80
        path: /
